# goodfood

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLEANUP_COMPLETE.md  Dockerfile  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  WEBSOCKET_SETUP.md  db_design.md  docker-compose.yml  main.py  nutrition_guide.md  pyproject.toml  server.py  simple_server.py  test_input_agent.py
.claude/: settings.local.json
alembic/: env.py
backend/: DATABASE_README.md  Dockerfile  README.md  __init__.py  alembic.ini  main.py  pyproject.toml  ruff.toml  test_conversion_only.py  test_fixes.py  test_validator_loop.py  test_websocket.py
backend/agents/: ingredient_estimator.py  ingredient_validator.py  input_agent.py  input_critic.py  nutrition_estimator.py  nutrition_verifier.py  preprocessing_agent.py
backend/alembic/: env.py
backend/api/: __init__.py  server.py
backend/config/: nutrients.py  nutrition_goals.py  settings.py
backend/database/: connection.py  gateway.py
backend/integrations/: claude_client.py  database.py  openfoodfacts_mcp.py
backend/migrations/: 001_initial_schema.sql
backend/models/: database.py  workflow.py
backend/scripts/: verify_db.py
backend/src/agents/: input_agent.py  nutrition_estimator.py  nutrition_verifier.py
backend/src/api/: server.py
backend/src/database/: connection.py  gateway.py
backend/src/integrations/: openfoodfacts_mcp.py
backend/src/workflows/: nutrition_workflow.py
backend/utils/: __init__.py  logger.py
backend/workflows/: estimation_workflow.py  gap_analysis_workflow.py  nutrition_langgraph.py  nutrition_workflow.py  parallel_nutrition_workflow.py
designs/: designed.html
frontend/: README.md  UPDATES.md  designed.html  index.html  package-lock.json  package.json
(+31 files in other folders)
