[project]
name = "goodfood"
version = "0.2.0"
description = "Multi-agent nutrition tracking system powered by AI"
requires-python = ">=3.10,<3.13"
dependencies = [
    # LLM & Agent Framework
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "anthropic>=0.25.0",
    # Data & Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Utilities
    "rich>=14.1.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    # Type hints
    "typing-extensions>=4.0.0",
    "fastapi>=0.118.2",
    "uvicorn[standard]>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ipython>=8.12.0",
]

[project.scripts]
goodfood = "main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "config", "integrations", "models", "workflows"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "N", "ASYNC", "S", "RUF", "PL", "PERF"]
ignore = ["E501", "S101", "B008", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "S105", "PLR2004"]
"scripts/**/*.py" = ["S105", "S106"]
"test_*.py" = ["S101", "ARG"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
